Fix HTML structure and improve formatting
Updated HTML structure and fixed formatting issues.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="app-container">
         <header>
-<div class="logo">a<span>ust</span>pay | <span style="color:#FFD700">PREMIUM</span></div>
+<div class="logo">A<span>ust</span>Pay | PREMIUM</span></div>
 
         <main class="card">
             <div class="input-group center">
@@ -71,3 +71,4 @@
 </body>
 
 </html>
+
