Fix HTML structure and formatting

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <div class="app-container">
         <header>
-<div class="logo">A<span>ust</span>Pay | PREMIUM</span></div>
-
+            <div class="logo">A<span>ust</span>Pay | PREMIUM</span></div>
+        </header>
+        
         <main class="card">
             <div class="input-group center">
                 <label>VALOR DA VENDA</label>
@@ -71,4 +72,5 @@
 </body>
 
 </html>
+
 
