Add background image to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div style="background-image: url('imagem.jpg');">
     <div class="app-container">
         <header>
             <div class="logo">A<span>ust</span>Pay | PREMIUM</span></div>
@@ -72,5 +73,6 @@
 </body>
 
 </html>
+
 
 
