Change background image in index.html
Updated the background image from 'imagem.jpg' to 'imagem.jpeg'.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div style="background-image: url('imagem.jpg');">
+    <div style="background-image: url('imagem.jpeg');">
     <div class="app-container">
         <header>
             <div class="logo">A<span>ust</span>Pay | PREMIUM</span></div>
@@ -73,6 +73,7 @@
 </body>
 
 </html>
+
 
 
 
